force-app/main/default/objects/Contact/fields/CCR_AgeVerificationStatus__c.field-meta.xml
<CustomField>
    <fullName>CCR_AgeVerificationStatus__c</fullName>
    <description>derived: blank, failed, pending, recognized, verified</description>
    <inlineHelpText>연령 확인 여부에 따른 컨택트의 상황정보 제공</inlineHelpText>
    <label>Age Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
                <isActive>false</isActive>
                <label>Failed</label>
            </value>
            <value>
                <fullName>INVALID</fullName>
                <isActive>false</isActive>
                <label>INVALID</label>
            </value>
            <value>
                <fullName>NONVERIFIED</fullName>
                <isActive>false</isActive>
                <label>NONVERIFIED</label>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Recognized</fullName>
                <isActive>false</isActive>
                <label>Recognized</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>