force-app/main/default/objects/Contact/fields/CCR_BlockedContact__c.field-meta.xml
<CustomField>
    <fullName>CCR_BlockedContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag identifying that the person is explicitly blocked from receiving campaign communications and form accessing SPICE</description>
    <label>Blocked Contact</label>
    <type>Checkbox</type>
</CustomField>