force-app/main/default/objects/Contact/fields/CCR_BockingReason__c.field-meta.xml
<CustomField>
    <fullName>CCR_BockingReason__c</fullName>
    <description>Reason why contact is blocked</description>
    <label>Blocking Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DECEASED</fullName>
            </value>
            <value>
                <fullName>COMPLAINER</fullName>
            </value>
            <value>
                <fullName>CHEATER</fullName>
            </value>
            <value>
                <fullName>UNDERAGE</fullName>
            </value>
            <value>
                <fullName>QUITTER</fullName>
            </value>
            <value>
                <fullName>MOVER</fullName>
            </value>
            <value>
                <fullName>NONSMOKER</fullName>
            </value>
            <value>
                <fullName>STOPPEDSMOKING</fullName>
            </value>
            <value>
                <fullName>PROMOTIONCOMPLAINT</fullName>
            </value>
            <value>
                <fullName>ROBINSONSLIST</fullName>
            </value>
            <value>
                <fullName>LEGALCOMPLAINT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>