force-app/main/default/objects/Contact/fields/CCR_CarePlusDueDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_CarePlusDueDate__c</fullName>
    <description>Field on Contact to store information about Care+ due date (Validity date): is the max(Validity Date, Due Dates) of all linked devices.</description>
    <label>Care+ Due Date</label>
    <type>DateTime</type>
</CustomField>