force-app/main/default/objects/Contact/fields/CCR_CarePlusStatus__c.field-meta.xml
<CustomField>
    <fullName>CCR_CarePlusStatus__c</fullName>
    <description>Field on Contact level to show Care+ current status.
Person is Enrolled if at least one device is Care+ enrolled.</description>
    <label>Care+ Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Enrolled</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>