force-app/main/default/objects/Contact/fields/CCR_ConsumerUID__c.field-meta.xml
<CustomField>
    <fullName>CCR_ConsumerUID__c</fullName>
    <description>SPICE internal ID</description>
    <externalId>true</externalId>
    <label>Consumer DB ID (AsIs Key)</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>