force-app/main/default/objects/Contact/fields/CCR_CountryID__c.field-meta.xml
<CustomField>
    <fullName>CCR_CountryID__c</fullName>
    <description>Two letters ISO code describibg the contry of the contact</description>
    <label>Home Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_CountryISOs</valueSetName>
    </valueSet>
</CustomField>