force-app/main/default/objects/Contact/fields/CCR_DatabaseOptin__c.field-meta.xml
<CustomField>
    <fullName>CCR_DatabaseOptin__c</fullName>
    <defaultValue>true</defaultValue>
    <description>I want to be part of the DB / I want to be deleted</description>
    <label>Database Opt-in</label>
    <type>Checkbox</type>
</CustomField>