force-app/main/default/objects/Contact/fields/CCR_Gender__c.field-meta.xml
<CustomField>
    <fullName>CCR_Gender__c</fullName>
    <description>Contact&apos;s gender</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTI_Genders</valueSetName>
    </valueSet>
</CustomField>