force-app/main/default/objects/Contact/fields/CCR_GlobalAgeVerification__c.field-meta.xml
<CustomField>
    <fullName>CCR_GlobalAgeVerification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is the consumer globally Aved?</description>
    <inlineHelpText>소비자 연령이 국제적으로 확인되었습니까?</inlineHelpText>
    <label>(?) Global Age Verification</label>
    <type>Checkbox</type>
</CustomField>