force-app/main/default/objects/Contact/fields/CCR_SmokerDeclarationDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_SmokerDeclarationDate__c</fullName>
    <description>Date when the self-declaration has been recorded</description>
    <label>Smoker Declaration Date</label>
    <type>DateTime</type>
</CustomField>