force-app/main/default/objects/Contact/fields/CCR_SmokerNew__c.field-meta.xml
<CustomField>
    <fullName>CCR_SmokerNew__c</fullName>
    <description>Used by: CCR Description: New field that will substitute CCR_Smoker. This was requested in order to be able to handle 3x values to sent to SPICE instead of just TRUE or FALSE</description>
    <label>Smoker Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_Declaration</valueSetName>
    </valueSet>
</CustomField>