force-app/main/default/objects/Contact/fields/CCR_SoftAgeVerifiedDate__c.field-meta.xml
<CustomField>
    <fullName>CCR_SoftAgeVerifiedDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date of the soft age verification declaration</description>
    <label>Soft Age Verified Date</label>
    <type>DateTime</type>
</CustomField>