force-app/main/default/objects/Contact/fields/CCR_SoftAgeVerifiedNew__c.field-meta.xml
<CustomField>
    <fullName>CCR_SoftAgeVerifiedNew__c</fullName>
    <complianceGroup>PII;HIPAA;GDPR;PCI;COPPA;CCPA</complianceGroup>
    <description>Used by: CCR Description: New field that will substitute CCR_SoftAgeVerified. This was requested in order to be able to handle 3x values to sent to SPICE instead of just TRUE or FALSE</description>
    <label>Soft Age Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CCR_Declaration</valueSetName>
    </valueSet>
</CustomField>