force-app/main/default/objects/Contact/fields/CCR_StreetNumber__c.field-meta.xml
<CustomField>
    <fullName>CCR_StreetNumber__c</fullName>
    <description>Address line 1 of a possible 5
Mapping recommendation Street number</description>
    <label>Street Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>