force-app/main/default/objects/Contact/fields/KDCE_ConvertDormantDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ConvertDormantDate__c</fullName>
    <description>[KDCE] 휴면고객으로 전환된 일</description>
    <label>Dormant Date</label>
    <type>DateTime</type>
</CustomField>