force-app/main/default/objects/Contact/fields/KDCE_ConvertedConsumer__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ConvertedConsumer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>새로운 Iqos.com 가입 고객</description>
    <inlineHelpText>새로운 Iqos.com 가입 고객</inlineHelpText>
    <label>Converted Consumer</label>
    <type>Checkbox</type>
</CustomField>