force-app/main/default/objects/Contact/fields/KDCE_DCIssueCount__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DCIssueCount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[KDCE] Device Coupon 발급 횟수</description>
    <label>Device Coupon Issue Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>