force-app/main/default/objects/Contact/fields/KDCE_DeviceHolderCount__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DeviceHolderCount__c</fullName>
    <label>Device Holder Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>