force-app/main/default/objects/Contact/fields/KDCE_DeviceSetCount__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DeviceSetCount__c</fullName>
    <label>Device Set Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>