force-app/main/default/objects/Contact/fields/KDCE_DropoutDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DropoutDate__c</fullName>
    <description>[KDCE] 탈퇴고객으로 전환된 일자</description>
    <label>DropOut Date</label>
    <type>DateTime</type>
</CustomField>