force-app/main/default/objects/Contact/fields/KDCE_DropOutReason__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DropOutReason__c</fullName>
    <description>[KDCE] DropOut Reason</description>
    <label>DropOut Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>