force-app/main/default/objects/Contact/fields/KDCE_DropoutRequestDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_DropoutRequestDate__c</fullName>
    <description>[KDCE] 탈퇴 요청을 한 일자</description>
    <label>DropOut Request Date</label>
    <type>DateTime</type>
</CustomField>