force-app/main/default/objects/Contact/fields/KDCE_ECJoinDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ECJoinDate__c</fullName>
    <label>E-Commerce Join Date</label>
    <type>DateTime</type>
</CustomField>