force-app/main/default/objects/Contact/fields/KDCE_EmailMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_EmailMask__c</fullName>
    <description>[KDCE] Email Masking Field</description>
    <label>Email(Mask)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>