force-app/main/default/objects/Contact/fields/KDCE_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_ExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>[KDCE] Contact Key SpiceID 대체</description>
    <externalId>true</externalId>
    <label>Consumer ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>