force-app/main/default/objects/Contact/fields/KDCE_FirstAddressLv1__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstAddressLv1__c</fullName>
    <description>[KDCE] 기본주소</description>
    <label>Default Address Lv1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>