force-app/main/default/objects/Contact/fields/KDCE_FirstAddressLv2__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstAddressLv2__c</fullName>
    <description>[KDCE] 상세주소</description>
    <label>Default Address Lv2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>