force-app/main/default/objects/Contact/fields/KDCE_FirstAddressPostal__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstAddressPostal__c</fullName>
    <description>[KDCE] 주소 우편번호</description>
    <label>Default Address Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>