force-app/main/default/objects/Contact/fields/KDCE_FirstPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_FirstPurchaseDate__c</fullName>
    <label>First Purchase Date</label>
    <type>DateTime</type>
</CustomField>