force-app/main/default/objects/Contact/fields/KDCE_fm_AgeVerificationExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_AgeVerificationExpiryDate__c</fullName>
    <description>[KDCE] 본인인증일 + 1년</description>
    <formula>ADDMONTHS(CCR_AVStatusDateChange__c,12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Verification Expiry Date</label>
    <type>DateTime</type>
</CustomField>