force-app/main/default/objects/Contact/fields/KDCE_fm_AvailDropout__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_AvailDropout__c</fullName>
    <description>[KDCE] 탈퇴 전환이 가능한 고객</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DropOut Available</label>
    <type>Checkbox</type>
</CustomField>