force-app/main/default/objects/Contact/fields/KDCE_fm_Consumer__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_Consumer__c</fullName>
    <description>[KDCE] 연락처 검색 레이아웃 display 용 필드</description>
    <formula>KDCE_fm_ConsumerType__c &amp; &quot; / &quot; &amp; TEXT( KDCE_LASLAU__c )</formula>
    <label>Consumer</label>
    <type>Text</type>
</CustomField>