force-app/main/default/objects/Contact/fields/KDCE_fm_ConsumerType__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_ConsumerType__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Consumer Type</label>
    <type>Text</type>
</CustomField>