force-app/main/default/objects/Contact/fields/KDCE_fm_DCPossibility__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_DCPossibility__c</fullName>
    <description>[KDCE]
Device Coupon Issuance Possible = Check
Device Coupon Issuance Impossible = Uncheck</description>
    <formula>/*TRUE*/
IF(KDCE_DCIssueCount__c &lt; 2, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Coupon Issuance Possibility</label>
    <type>Checkbox</type>
</CustomField>