force-app/main/default/objects/Contact/fields/KDCE_fm_DormantMailTargetDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_DormantMailTargetDate__c</fullName>
    <formula>if(ISPICKVAL(KDCE_PersonalInfoValidityPeriod__c, &apos;1y&apos;), ADDMONTHS( DATEVALUE(KDCE_fm_LastActivityDate__c) ,11),
if(ISPICKVAL(KDCE_PersonalInfoValidityPeriod__c, &apos;3y&apos;), ADDMONTHS( DATEVALUE(KDCE_fm_LastActivityDate__c) ,35), null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dormant Mail Target Date</label>
    <type>Date</type>
</CustomField>