force-app/main/default/objects/Contact/fields/KDCE_fm_IsAgeReVerification__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_IsAgeReVerification__c</fullName>
    <description>[KDCE] HAV 재인증 대상. .HAV 인증 만료일에 따라 체크.</description>
    <formula>IF(
    or (KDCE_fm_AgeVerificationExpiryDate__c = null, KDCE_fm_AgeVerificationExpiryDate__c &gt;=  NOW()),
				FALSE,
				KDCE_fm_AgeVerificationExpiryDate__c &lt;  NOW()
)</formula>
    <label>Age ReVerification Target</label>
    <type>Checkbox</type>
</CustomField>