force-app/main/default/objects/Contact/fields/KDCE_fm_IsDormantMailSend__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_IsDormantMailSend__c</fullName>
    <description>[KDCE] KDCE_PersonalInfoValidityPeriod__c = 1y면 11개월동안 활동내역이 없는 고객, KDCE_PersonalInfoValidityPeriod__c  = 3y면 35개월 동안 활동내역이 없는 고객</description>
    <formula>if (AND(ADDMONTHS(				 DATEVALUE(KDCE_fm_LastActivityDate__c) ,11)=today(),  ISPICKVAL(KDCE_PersonalInfoValidityPeriod__c, &apos;1y&apos;)),true, 
				if (AND(ADDMONTHS(				 DATEVALUE(KDCE_fm_LastActivityDate__c) ,35)=today(),  ISPICKVAL(KDCE_PersonalInfoValidityPeriod__c, &apos;3y&apos;) ), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dormant Mail Target</label>
    <type>Checkbox</type>
</CustomField>