force-app/main/default/objects/Contact/fields/KDCE_fm_IsTargetDormant__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_IsTargetDormant__c</fullName>
    <description>[KDCE] 일정 기간 동안 활동내역이 없어서 휴면으로 전환될 고객</description>
    <formula>if (AND(ADDMONTHS(KDCE_fm_LastActivityDate__c,12)&lt;=now(),  ISPICKVAL(KDCE_PersonalInfoValidityPeriod__c, &apos;1y&apos;)),true, 
				if (AND(ADDMONTHS(KDCE_fm_LastActivityDate__c,36)&lt;=now(),  ISPICKVAL(KDCE_PersonalInfoValidityPeriod__c, &apos;3y&apos;) ), true, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dormant Target</label>
    <type>Checkbox</type>
</CustomField>