force-app/main/default/objects/Contact/fields/KDCE_fm_POS_BirthdateMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_POS_BirthdateMask__c</fullName>
    <description>POS Birthdate Masking</description>
    <formula>SUBSTITUTE( TEXT( Birthdate ), MID( TEXT( Birthdate ), 6, 5 ), &quot;**-**&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthdate(Mask) for POS</label>
    <type>Text</type>
</CustomField>