force-app/main/default/objects/Contact/fields/KDCE_fm_POS_NameMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_POS_NameMask__c</fullName>
    <description>POS Name Mask</description>
    <formula>RPAD( LEFT( KDCE_Name__c, 1), LEN( KDCE_Name__c ), &apos;*&apos;)+RIGHT(KDCE_Name__c, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name(Mask) for POS</label>
    <type>Text</type>
</CustomField>