force-app/main/default/objects/Contact/fields/KDCE_fm_POS_PhoneMask__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_POS_PhoneMask__c</fullName>
    <description>POS Phone Mask</description>
    <formula>IF( LEFT( Phone, 2 ) = &quot;02&quot;,
SUBSTITUTE( Phone, MID( Phone, 3, LEN( Phone )-6 ), &quot;-****-&quot; ),
SUBSTITUTE( Phone, MID( Phone, 4, LEN( Phone )-7 ), &quot;-****-&quot; )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone(Mask) for POS</label>
    <type>Text</type>
</CustomField>