force-app/main/default/objects/Contact/fields/KDCE_fm_RemoteCoach__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_RemoteCoach__c</fullName>
    <formula>IF(  KDCE_FirstPurchaseDate__c = KDCE_LastPurchaseDate__c ,
			  TODAY() - DATEVALUE( KDCE_FirstPurchaseDate__c ),
			  -1)</formula>
    <label>Days Elapsed (1st Purchase)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>