force-app/main/default/objects/Contact/fields/KDCE_GodFather__c.field-meta.xml
<CustomField>
    <fullName>KDCE_GodFather__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] MGM Code를 제공한 고객</description>
    <label>God Father</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>God Sons</relationshipLabel>
    <relationshipName>KDCE_GodSons</relationshipName>
    <type>Lookup</type>
</CustomField>