force-app/main/default/objects/Contact/fields/KDCE_HasRegistedUsingKakaoId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_HasRegistedUsingKakaoId__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Indicates whether the Contact has registered using KAKAO Account</description>
    <inlineHelpText>Indicates whether the Contact has registered using KAKAO Account</inlineHelpText>
    <label>Has Registered using KAKAO Account</label>
    <type>Checkbox</type>
</CustomField>