force-app/main/default/objects/Contact/fields/KDCE_InformationOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_InformationOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] information opt-in</description>
    <label>Information Opt-in</label>
    <type>Checkbox</type>
</CustomField>