force-app/main/default/objects/Contact/fields/KDCE_IqosON__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IqosON__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] ON 프로그램 가입 여부</description>
    <label>IQOS ON</label>
    <type>Checkbox</type>
</CustomField>