force-app/main/default/objects/Contact/fields/KDCE_IqosUP__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IqosUP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] UP 프로그램 가입여부</description>
    <label>IQOS UP</label>
    <type>Checkbox</type>
</CustomField>