force-app/main/default/objects/Contact/fields/KDCE_IsDormant__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsDormant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] 배치로 인해 휴면 처리가 된 고객</description>
    <label>Dormant Contact</label>
    <type>Checkbox</type>
</CustomField>