force-app/main/default/objects/Contact/fields/KDCE_IsDropout__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsDropout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] 탈퇴고객으로 전환된 고객</description>
    <label>DropOut Contact</label>
    <type>Checkbox</type>
</CustomField>