force-app/main/default/objects/Contact/fields/KDCE_IsMGMIssue__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsMGMIssue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] 개발용</description>
    <label>MGM Coupon Issue</label>
    <type>Checkbox</type>
</CustomField>