force-app/main/default/objects/Contact/fields/KDCE_IsProcessTradeIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsProcessTradeIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Order에서 Trade-in이 진행시 체크, 멈춤시 해제</description>
    <label>Trade-In Collect Order YN</label>
    <type>Checkbox</type>
</CustomField>