force-app/main/default/objects/Contact/fields/KDCE_IsRequestDropout__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsRequestDropout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] 탈퇴 요청을 한 고객</description>
    <label>DropOut Request</label>
    <type>Checkbox</type>
</CustomField>