force-app/main/default/objects/Contact/fields/KDCE_IsStoreContact__c.field-meta.xml
<CustomField>
    <fullName>KDCE_IsStoreContact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] Store Default Contact</description>
    <label>Store Contact</label>
    <type>Checkbox</type>
</CustomField>