force-app/main/default/objects/Contact/fields/KDCE_JoinedPMKChannel__c.field-meta.xml
<CustomField>
    <fullName>KDCE_JoinedPMKChannel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] PMK Kakao Plus Channel Registration Indicator</description>
    <inlineHelpText>PMK Kakao Plus Channel Registration Indicator</inlineHelpText>
    <label>Joined PMK Kakao Channel</label>
    <type>Checkbox</type>
</CustomField>