force-app/main/default/objects/Contact/fields/KDCE_KakaoId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_KakaoId__c</fullName>
    <description>[KDCE] KAKAO Account ID</description>
    <inlineHelpText>KAKAO Account ID</inlineHelpText>
    <label>KAKAO Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>