force-app/main/default/objects/Contact/fields/KDCE_LASLAU__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LASLAU__c</fullName>
    <description>[KDCE] LAS / LAU</description>
    <label>LAS/LAU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LAS</fullName>
                <default>true</default>
                <label>LAS</label>
            </value>
            <value>
                <fullName>LAU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>