force-app/main/default/objects/Contact/fields/KDCE_LastCaseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastCaseDate__c</fullName>
    <description>[KDCE] Contact이 마지막 Case 생성한 날짜</description>
    <label>Last Case Date (Online)</label>
    <type>DateTime</type>
</CustomField>