force-app/main/default/objects/Contact/fields/KDCE_LastCloseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastCloseDate__c</fullName>
    <description>[KDCE] 케이스가 종료되는 시점에 업데이트</description>
    <label>Last Case Close Date (Online)</label>
    <type>DateTime</type>
</CustomField>