force-app/main/default/objects/Contact/fields/KDCE_LastCouponUsedDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastCouponUsedDate__c</fullName>
    <description>[KDCE] CVS Coupon 마지막 사용 날짜</description>
    <label>Last CVS Coupon Burnt Date</label>
    <type>DateTime</type>
</CustomField>