force-app/main/default/objects/Contact/fields/KDCE_LastCRMResponseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastCRMResponseDate__c</fullName>
    <description>CRM 서베이 답변이 입력되면 업데이트</description>
    <label>Last CRM Survey Response Date</label>
    <type>DateTime</type>
</CustomField>