force-app/main/default/objects/Contact/fields/KDCE_LastDeviceLinkDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastDeviceLinkDate__c</fullName>
    <description>[KDCE] Contact이 Asset Life Cycle &apos;Link&apos; 레코드 생성한 날짜</description>
    <label>Last Device Registration Date</label>
    <type>DateTime</type>
</CustomField>