force-app/main/default/objects/Contact/fields/KDCE_LastKakaoSyncDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastKakaoSyncDate__c</fullName>
    <description>KDCE_JoinedPMKChannel__c 필드가 True로 업데이트 되는 시점에 업데이트</description>
    <label>Last Kakao Sync Date</label>
    <type>DateTime</type>
</CustomField>