force-app/main/default/objects/Contact/fields/KDCE_LastLoginDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastLoginDate__c</fullName>
    <description>[KDCE] 마지막 로그인 날짜</description>
    <label>Last Login Date</label>
    <type>DateTime</type>
</CustomField>