force-app/main/default/objects/Contact/fields/KDCE_LastNPSResponseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastNPSResponseDate__c</fullName>
    <label>Last NPS Survey Response Date</label>
    <type>DateTime</type>
</CustomField>