force-app/main/default/objects/Contact/fields/KDCE_LastNPSSendDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastNPSSendDate__c</fullName>
    <label>Last NPS Survey Send Date</label>
    <type>Date</type>
</CustomField>