force-app/main/default/objects/Contact/fields/KDCE_LastOfflineProgramDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastOfflineProgramDate__c</fullName>
    <description>[KDCE] Offline Program이 등록되는 시점에 업데이트</description>
    <label>Last Offline Program Date</label>
    <type>DateTime</type>
</CustomField>