force-app/main/default/objects/Contact/fields/KDCE_LastPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastPurchaseDate__c</fullName>
    <label>Last Purchase Date</label>
    <type>DateTime</type>
</CustomField>