force-app/main/default/objects/Contact/fields/KDCE_LastPurchaseId__c.field-meta.xml
<CustomField>
    <fullName>KDCE_LastPurchaseId__c</fullName>
    <description>Last Purchase에 해당하는 Order/Offline Program/Coupon에 대한 레코드 Id를 저장</description>
    <label>Last Purchase Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>