force-app/main/default/objects/Contact/fields/KDCE_MarketingOptIn__c.field-meta.xml
<CustomField>
    <fullName>KDCE_MarketingOptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE] 마케팅 수신 동의여부 체크</description>
    <label>Marketing Opt-In</label>
    <type>Checkbox</type>
</CustomField>